// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryButton renders correctly with no props 1`] = `
<li
  className="nav-item false"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <a
    className="nav-link"
    href="/"
    onClick={[Function]}
  >
     
  </a>
</li>
`;

exports[`CategoryButton renders correctly with props 1`] = `
<li
  className="nav-item active"
  style={
    Object {
      "color": "orange",
    }
  }
>
  <a
    className="nav-link"
    href="/"
    onClick={[Function]}
  >
    test
     
    <span
      className="sr-only"
    >
      (current)
    </span>
  </a>
</li>
`;
